// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Container should correctly render amp navigation 1`] = `
.emotion-0 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-0.si-nav-open {
    background-color: #222222;
  }
}

.emotion-0::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-0 .emotion-70::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-6 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-6 {
    fill: linkText;
  }
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-12 {
  background-color: #FFFFFF;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-14 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-16 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-16:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-18:hover,
.emotion-18:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-20 {
  border-left: 0.25rem solid #B80000;
  padding-left: 0.5rem;
}

@media (max-width: 37.4375rem) {
  .emotion-65 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-65::-webkit-scrollbar {
    display: none;
  }

  .emotion-65:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1)
              100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-65:after {
      width: 6rem;
    }
  }
}

@media (max-width: 37.4375rem) {
  .emotion-65.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-67 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-67 {
    overflow: hidden;
  }
}

.emotion-69 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-69:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-69::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-71 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-71 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-71 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-71 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-71:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  border-bottom: 0.3125rem solid #B80000;
}

.emotion-71:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.25rem solid #B80000;
}

.emotion-73::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-79 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-79 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-79 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-79 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-79:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-79:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.25rem solid #B80000;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-4 emotion-5"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-10 emotion-11"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-12 emotion-13"
        data-e2e="dropdown-nav"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-14 emotion-15"
          role="list"
        >
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-home"
              class="emotion-18 emotion-19"
              href="/news"
            >
              <span
                class="emotion-20 emotion-21"
                dir="ltr"
                id="dropdownNavigation-home"
                role="text"
              >
                <span
                  class="emotion-10 emotion-11"
                >
                  Current page, 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-uk"
              class="emotion-18 emotion-19"
              href="/news/uk"
            >
              <span
                id="dropdownNavigation-uk"
              >
                UK
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-world"
              class="emotion-18 emotion-19"
              href="/news/world"
            >
              <span
                id="dropdownNavigation-world"
              >
                World
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-business"
              class="emotion-18 emotion-19"
              href="/news/business"
            >
              <span
                id="dropdownNavigation-business"
              >
                Business
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-politics"
              class="emotion-18 emotion-19"
              href="/news/politics"
            >
              <span
                id="dropdownNavigation-politics"
              >
                Politics
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-tech"
              class="emotion-18 emotion-19"
              href="/news/technology"
            >
              <span
                id="dropdownNavigation-tech"
              >
                Tech
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-science"
              class="emotion-18 emotion-19"
              href="/news/science_and_environment"
            >
              <span
                id="dropdownNavigation-science"
              >
                Science
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-health"
              class="emotion-18 emotion-19"
              href="/news/health"
            >
              <span
                id="dropdownNavigation-health"
              >
                Health
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-family-&-education"
              class="emotion-18 emotion-19"
              href="/news/education"
            >
              <span
                id="dropdownNavigation-family-&-education"
              >
                Family & Education
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-entertainment-&-arts"
              class="emotion-18 emotion-19"
              href="/news/entertainment_and_arts"
            >
              <span
                id="dropdownNavigation-entertainment-&-arts"
              >
                Entertainment & Arts
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-stories"
              class="emotion-18 emotion-19"
              href="/news/stories"
            >
              <span
                id="dropdownNavigation-stories"
              >
                Stories
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-64 emotion-65 emotion-66"
        data-e2e="scrollable-nav"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-67 emotion-68"
          role="list"
        >
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              aria-labelledby="NavigationLinks-Home"
              class="emotion-71 emotion-72"
              href="/news"
            >
              <span
                class="emotion-73 emotion-74"
                id="NavigationLinks-Home"
                role="text"
              >
                <span
                  class="emotion-10 emotion-11"
                >
                  Current page, 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-69 emotion-70"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-79 emotion-72"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render amp navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-0.si-nav-open {
    background-color: #222222;
  }
}

.emotion-0::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-0 .emotion-66::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-6 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-6 {
    fill: linkText;
  }
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-12 {
  background-color: #FFFFFF;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-14 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-16 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-16:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-18:hover,
.emotion-18:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

@media (max-width: 37.4375rem) {
  .emotion-61 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-61::-webkit-scrollbar {
    display: none;
  }

  .emotion-61:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1)
              100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-61:after {
      width: 6rem;
    }
  }
}

@media (max-width: 37.4375rem) {
  .emotion-61.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-63 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-63 {
    overflow: hidden;
  }
}

.emotion-65 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-65:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-65::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-67 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-67 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-67 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-67 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-67:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-67:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.25rem solid #B80000;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-4 emotion-5"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-10 emotion-11"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-12 emotion-13"
        data-e2e="dropdown-nav"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-14 emotion-15"
          role="list"
        >
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-home"
              class="emotion-18 emotion-19"
              href="/news"
            >
              <span
                id="dropdownNavigation-home"
              >
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-uk"
              class="emotion-18 emotion-19"
              href="/news/uk"
            >
              <span
                id="dropdownNavigation-uk"
              >
                UK
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-world"
              class="emotion-18 emotion-19"
              href="/news/world"
            >
              <span
                id="dropdownNavigation-world"
              >
                World
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-business"
              class="emotion-18 emotion-19"
              href="/news/business"
            >
              <span
                id="dropdownNavigation-business"
              >
                Business
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-politics"
              class="emotion-18 emotion-19"
              href="/news/politics"
            >
              <span
                id="dropdownNavigation-politics"
              >
                Politics
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-tech"
              class="emotion-18 emotion-19"
              href="/news/technology"
            >
              <span
                id="dropdownNavigation-tech"
              >
                Tech
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-science"
              class="emotion-18 emotion-19"
              href="/news/science_and_environment"
            >
              <span
                id="dropdownNavigation-science"
              >
                Science
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-health"
              class="emotion-18 emotion-19"
              href="/news/health"
            >
              <span
                id="dropdownNavigation-health"
              >
                Health
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-family-&-education"
              class="emotion-18 emotion-19"
              href="/news/education"
            >
              <span
                id="dropdownNavigation-family-&-education"
              >
                Family & Education
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-entertainment-&-arts"
              class="emotion-18 emotion-19"
              href="/news/entertainment_and_arts"
            >
              <span
                id="dropdownNavigation-entertainment-&-arts"
              >
                Entertainment & Arts
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-stories"
              class="emotion-18 emotion-19"
              href="/news/stories"
            >
              <span
                id="dropdownNavigation-stories"
              >
                Stories
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-60 emotion-61 emotion-62"
        data-e2e="scrollable-nav"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-63 emotion-64"
          role="list"
        >
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render amp navigation on non-navigation page 1`] = `
.emotion-0 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-0.si-nav-open {
    background-color: #222222;
  }
}

.emotion-0::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-0 .emotion-66::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-6 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-6 {
    fill: linkText;
  }
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-12 {
  background-color: #FFFFFF;
  clear: both;
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-14 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-16 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-16:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-18:hover,
.emotion-18:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

@media (max-width: 37.4375rem) {
  .emotion-61 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-61::-webkit-scrollbar {
    display: none;
  }

  .emotion-61:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1)
              100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-61:after {
      width: 6rem;
    }
  }
}

@media (max-width: 37.4375rem) {
  .emotion-61.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-63 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-63 {
    overflow: hidden;
  }
}

.emotion-65 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-65:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-65::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-67 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-67 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-67 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-67 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-67:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-67:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.25rem solid #B80000;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-4 emotion-5"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-10 emotion-11"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-12 emotion-13"
        data-e2e="dropdown-nav"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-14 emotion-15"
          role="list"
        >
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-home"
              class="emotion-18 emotion-19"
              href="/news"
            >
              <span
                id="dropdownNavigation-home"
              >
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-uk"
              class="emotion-18 emotion-19"
              href="/news/uk"
            >
              <span
                id="dropdownNavigation-uk"
              >
                UK
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-world"
              class="emotion-18 emotion-19"
              href="/news/world"
            >
              <span
                id="dropdownNavigation-world"
              >
                World
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-business"
              class="emotion-18 emotion-19"
              href="/news/business"
            >
              <span
                id="dropdownNavigation-business"
              >
                Business
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-politics"
              class="emotion-18 emotion-19"
              href="/news/politics"
            >
              <span
                id="dropdownNavigation-politics"
              >
                Politics
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-tech"
              class="emotion-18 emotion-19"
              href="/news/technology"
            >
              <span
                id="dropdownNavigation-tech"
              >
                Tech
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-science"
              class="emotion-18 emotion-19"
              href="/news/science_and_environment"
            >
              <span
                id="dropdownNavigation-science"
              >
                Science
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-health"
              class="emotion-18 emotion-19"
              href="/news/health"
            >
              <span
                id="dropdownNavigation-health"
              >
                Health
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-family-&-education"
              class="emotion-18 emotion-19"
              href="/news/education"
            >
              <span
                id="dropdownNavigation-family-&-education"
              >
                Family & Education
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-entertainment-&-arts"
              class="emotion-18 emotion-19"
              href="/news/entertainment_and_arts"
            >
              <span
                id="dropdownNavigation-entertainment-&-arts"
              >
                Entertainment & Arts
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-stories"
              class="emotion-18 emotion-19"
              href="/news/stories"
            >
              <span
                id="dropdownNavigation-stories"
              >
                Stories
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-60 emotion-61 emotion-62"
        data-e2e="scrollable-nav"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-63 emotion-64"
          role="list"
        >
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-65 emotion-66"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-67 emotion-68"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation 1`] = `
.emotion-0 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-0::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-0 .emotion-17::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-8 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-8 {
    fill: linkText;
  }
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

@media (max-width: 37.4375rem) {
  .emotion-12 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-12::-webkit-scrollbar {
    display: none;
  }

  .emotion-12:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1)
              100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-12:after {
      width: 6rem;
    }
  }
}

.emotion-14 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    overflow: hidden;
  }
}

.emotion-16 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-16:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-18 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-18:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  border-bottom: 0.3125rem solid #B80000;
}

.emotion-18:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.25rem solid #B80000;
}

.emotion-20::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-26 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-26 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-26:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-26:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.25rem solid #B80000;
}

.emotion-64 {
  background-color: #FFFFFF;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-64 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-64 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-66 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-68 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-68:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-70 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-70 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-70 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-70:hover,
.emotion-70:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-72 {
  border-left: 0.25rem solid #B80000;
  padding-left: 0.5rem;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          aria-expanded="false"
          class="emotion-6 emotion-7"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-8 emotion-9"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-10 emotion-11"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-12 emotion-13"
          data-e2e="scrollable-nav"
          dir="ltr"
        >
          <ul
            class="emotion-14 emotion-15"
            role="list"
          >
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                aria-labelledby="NavigationLinks-Home"
                class="emotion-18 emotion-19"
                href="/news"
              >
                <span
                  class="emotion-20 emotion-21"
                  id="NavigationLinks-Home"
                  role="text"
                >
                  <span
                    class="emotion-10 emotion-11"
                  >
                    Current page, 
                  </span>
                  Home
                </span>
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-64 emotion-65"
        data-e2e="dropdown-nav"
        height="0"
      >
        <ul
          class="emotion-66 emotion-67"
          role="list"
        >
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-home"
              class="emotion-70 emotion-71"
              href="/news"
            >
              <span
                class="emotion-72 emotion-73"
                dir="ltr"
                id="dropdownNavigation-home"
                role="text"
              >
                <span
                  class="emotion-10 emotion-11"
                >
                  Current page, 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-uk"
              class="emotion-70 emotion-71"
              href="/news/uk"
            >
              <span
                id="dropdownNavigation-uk"
              >
                UK
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-world"
              class="emotion-70 emotion-71"
              href="/news/world"
            >
              <span
                id="dropdownNavigation-world"
              >
                World
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-business"
              class="emotion-70 emotion-71"
              href="/news/business"
            >
              <span
                id="dropdownNavigation-business"
              >
                Business
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-politics"
              class="emotion-70 emotion-71"
              href="/news/politics"
            >
              <span
                id="dropdownNavigation-politics"
              >
                Politics
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-tech"
              class="emotion-70 emotion-71"
              href="/news/technology"
            >
              <span
                id="dropdownNavigation-tech"
              >
                Tech
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-science"
              class="emotion-70 emotion-71"
              href="/news/science_and_environment"
            >
              <span
                id="dropdownNavigation-science"
              >
                Science
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-health"
              class="emotion-70 emotion-71"
              href="/news/health"
            >
              <span
                id="dropdownNavigation-health"
              >
                Health
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-family-&-education"
              class="emotion-70 emotion-71"
              href="/news/education"
            >
              <span
                id="dropdownNavigation-family-&-education"
              >
                Family & Education
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-entertainment-&-arts"
              class="emotion-70 emotion-71"
              href="/news/entertainment_and_arts"
            >
              <span
                id="dropdownNavigation-entertainment-&-arts"
              >
                Entertainment & Arts
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-stories"
              class="emotion-70 emotion-71"
              href="/news/stories"
            >
              <span
                id="dropdownNavigation-stories"
              >
                Stories
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-0::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-0 .emotion-17::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-8 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-8 {
    fill: linkText;
  }
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

@media (max-width: 37.4375rem) {
  .emotion-12 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-12::-webkit-scrollbar {
    display: none;
  }

  .emotion-12:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1)
              100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-12:after {
      width: 6rem;
    }
  }
}

.emotion-14 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    overflow: hidden;
  }
}

.emotion-16 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-16:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-18 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-18:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-18:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.25rem solid #B80000;
}

.emotion-60 {
  background-color: #FFFFFF;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-60 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-60 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-62 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-64 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-64:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-66 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-66:hover,
.emotion-66:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          aria-expanded="false"
          class="emotion-6 emotion-7"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-8 emotion-9"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-10 emotion-11"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-12 emotion-13"
          data-e2e="scrollable-nav"
          dir="ltr"
        >
          <ul
            class="emotion-14 emotion-15"
            role="list"
          >
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news"
              >
                Home
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-60 emotion-61"
        data-e2e="dropdown-nav"
        height="0"
      >
        <ul
          class="emotion-62 emotion-63"
          role="list"
        >
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-home"
              class="emotion-66 emotion-67"
              href="/news"
            >
              <span
                id="dropdownNavigation-home"
              >
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-uk"
              class="emotion-66 emotion-67"
              href="/news/uk"
            >
              <span
                id="dropdownNavigation-uk"
              >
                UK
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-world"
              class="emotion-66 emotion-67"
              href="/news/world"
            >
              <span
                id="dropdownNavigation-world"
              >
                World
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-business"
              class="emotion-66 emotion-67"
              href="/news/business"
            >
              <span
                id="dropdownNavigation-business"
              >
                Business
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-politics"
              class="emotion-66 emotion-67"
              href="/news/politics"
            >
              <span
                id="dropdownNavigation-politics"
              >
                Politics
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-tech"
              class="emotion-66 emotion-67"
              href="/news/technology"
            >
              <span
                id="dropdownNavigation-tech"
              >
                Tech
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-science"
              class="emotion-66 emotion-67"
              href="/news/science_and_environment"
            >
              <span
                id="dropdownNavigation-science"
              >
                Science
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-health"
              class="emotion-66 emotion-67"
              href="/news/health"
            >
              <span
                id="dropdownNavigation-health"
              >
                Health
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-family-&-education"
              class="emotion-66 emotion-67"
              href="/news/education"
            >
              <span
                id="dropdownNavigation-family-&-education"
              >
                Family & Education
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-entertainment-&-arts"
              class="emotion-66 emotion-67"
              href="/news/entertainment_and_arts"
            >
              <span
                id="dropdownNavigation-entertainment-&-arts"
              >
                Entertainment & Arts
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-stories"
              class="emotion-66 emotion-67"
              href="/news/stories"
            >
              <span
                id="dropdownNavigation-stories"
              >
                Stories
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation on non-navigation page 1`] = `
.emotion-0 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-0::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-0 .emotion-17::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-2 {
    margin: 0 auto;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-8 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-8 {
    fill: linkText;
  }
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

@media (max-width: 37.4375rem) {
  .emotion-12 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-12::-webkit-scrollbar {
    display: none;
  }

  .emotion-12:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1)
              100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-12:after {
      width: 6rem;
    }
  }
}

.emotion-14 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    overflow: hidden;
  }
}

.emotion-16 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-16:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-18 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-18:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-18:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.25rem solid #B80000;
}

.emotion-60 {
  background-color: #FFFFFF;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-60 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-60 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-62 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-64 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-64:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-66 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-66:hover,
.emotion-66:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          aria-expanded="false"
          class="emotion-6 emotion-7"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-8 emotion-9"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-10 emotion-11"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-12 emotion-13"
          data-e2e="scrollable-nav"
          dir="ltr"
        >
          <ul
            class="emotion-14 emotion-15"
            role="list"
          >
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news"
              >
                Home
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-60 emotion-61"
        data-e2e="dropdown-nav"
        height="0"
      >
        <ul
          class="emotion-62 emotion-63"
          role="list"
        >
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-home"
              class="emotion-66 emotion-67"
              href="/news"
            >
              <span
                id="dropdownNavigation-home"
              >
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-uk"
              class="emotion-66 emotion-67"
              href="/news/uk"
            >
              <span
                id="dropdownNavigation-uk"
              >
                UK
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-world"
              class="emotion-66 emotion-67"
              href="/news/world"
            >
              <span
                id="dropdownNavigation-world"
              >
                World
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-business"
              class="emotion-66 emotion-67"
              href="/news/business"
            >
              <span
                id="dropdownNavigation-business"
              >
                Business
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-politics"
              class="emotion-66 emotion-67"
              href="/news/politics"
            >
              <span
                id="dropdownNavigation-politics"
              >
                Politics
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-tech"
              class="emotion-66 emotion-67"
              href="/news/technology"
            >
              <span
                id="dropdownNavigation-tech"
              >
                Tech
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-science"
              class="emotion-66 emotion-67"
              href="/news/science_and_environment"
            >
              <span
                id="dropdownNavigation-science"
              >
                Science
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-health"
              class="emotion-66 emotion-67"
              href="/news/health"
            >
              <span
                id="dropdownNavigation-health"
              >
                Health
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-family-&-education"
              class="emotion-66 emotion-67"
              href="/news/education"
            >
              <span
                id="dropdownNavigation-family-&-education"
              >
                Family & Education
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-entertainment-&-arts"
              class="emotion-66 emotion-67"
              href="/news/entertainment_and_arts"
            >
              <span
                id="dropdownNavigation-entertainment-&-arts"
              >
                Entertainment & Arts
              </span>
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              aria-labelledby="dropdownNavigation-stories"
              class="emotion-66 emotion-67"
              href="/news/stories"
            >
              <span
                id="dropdownNavigation-stories"
              >
                Stories
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;
